# akiora-blazing

./: .gitignore  certbot-manage.sh  docker-compose.yml  justfile
backend/proto/community/: Cargo.toml  docker-compose.yml
backend/proto/community/club/v1/: club_service.proto
backend/proto/community/src/: constants.rs  db.rs  main.rs  state.rs
backend/proto/community/src/group/: mod.rs
backend/proto/community/src/group/domain/: group_domain.rs  group_repository.rs  group_service.rs  mod.rs
backend/proto/community/src/group/grpc/: group_grpc.rs  mod.rs
backend/proto/community/src/group/mapper/: group_mapper.rs  mod.rs
backend/proto/community/src/group/persistence/: group.rs  mod.rs
backend/proto/community/src/group/rest/: dto.rs  handler.rs  mod.rs
backend/proto/community/src/group/v1/: group_service.proto
backend/proto/community/src/user/: mod.rs
backend/proto/community/src/user/domain/: mod.rs  user_domain.rs  user_repository.rs  user_service.rs
backend/proto/community/src/user/grpc/: mod.rs  user_grpc.rs
backend/proto/community/src/user/mapper/: mod.rs  user_mapper.rs
backend/proto/community/src/user/persistence/: mod.rs  user.rs
backend/proto/community/src/user/rest/: dto.rs  handler.rs  mod.rs
backend/proto/community/team/v1/: team_service.proto
backend/proto/community/user/v1/: user_service.proto
backend/python/: data.md  main.py  pyproject.toml
backend/python/auth/: Dockerfile  ioc.py  main.py  pyproject.toml  routes.py  settings.py
backend/python/auth/domain/: auth_service.py  session_repo.py  session_service.py
backend/python/community/: Dockerfile  ioc.py  main.py  pyproject.toml  settings.py  setup.py
backend/python/community/app/: app.py  club_grpc.py  team_grpc.py  user_grpc.py
backend/python/community/community/user/v1/: user_service_pb2.py
backend/python/community/domain/entites/: club.py  friend.py  team.py  user.py
backend/python/community/domain/services/: club_service.py  lol_refresher.py  team_service.py  user_service.py
backend/python/community/google/api/: backend_pb2.pyi  client_pb2.py  consumer_pb2_grpc.py  control_pb2_grpc.py  distribution_pb2_grpc.py  documentation_pb2_grpc.py  error_reason_pb2.pyi  error_reason_pb2_grpc.py  field_behavior_pb2_grpc.py  monitored_resource_pb2_grpc.py  source_info_pb2_grpc.py
backend/python/draft/: .env  Dockerfile  app.py  draft_model.py  draft_schemas.py  draft_service.py  ioc.py  main.py  pyproject.toml  rules.py  settings.py
backend/python/game/: Dockerfile  ioc.py  pyproject.toml  settings.py  setup.py
backend/python/game/app/: app.py  gameseries_grpc.py  tournament_gprc.py
backend/python/game/common/: game_settings_pb2.pyi
backend/python/game/domain/value_objects/: actors.py  bracket.py  settings.py  statuses.py
backend/python/game/game/v1/: tournament_service_pb2_grpc.py
backend/python/game/google/api/: auth_pb2_grpc.py  backend_pb2.py  billing_pb2_grpc.py  context_pb2_grpc.py  endpoint_pb2_grpc.py  httpbody_pb2_grpc.py  logging_pb2_grpc.py  metric_pb2_grpc.py  policy_pb2_grpc.py  quota_pb2_grpc.py  service_pb2_grpc.py  system_parameter_pb2_grpc.py  usage_pb2_grpc.py  visibility_pb2_grpc.py
backend/python/gateway/: Dockerfile  dependencies.py  ioc.py  main.py  pyproject.toml  redis_invalidator.py  settings.py
backend/python/gateway/routes/: club.py  gameseries.py  group.py  messenger.py  presence.py  search.py  team.py  tournament.py  user.py
backend/python/gateway/schemas/: __init__.py  cookie.py
backend/python/messenger/: Dockerfile  ioc.py  main.py  pyproject.toml  settings.py  setup.py
backend/python/messenger/app/: app.py  chat_grpc.py  message_grpc.py
backend/python/messenger/common/: game_draft_pb2_grpc.py
backend/python/messenger/domain/entities/: chat.py  message.py
backend/python/messenger/domain/services/: chat.py  message.py
backend/python/messenger/google/api/: backend_pb2_grpc.py  client_pb2.pyi  client_pb2_grpc.py  config_change_pb2_grpc.py  error_reason_pb2.py  field_info_pb2_grpc.py  label_pb2_grpc.py  launch_stage_pb2_grpc.py  log_pb2_grpc.py  monitoring_pb2_grpc.py  resource_pb2_grpc.py  routing_pb2_grpc.py
backend/python/messenger/messenger/v1/: messenger_service_pb2_grpc.py
backend/python/notification/: Dockerfile  app.py  ioc.py  main.py  notification_model.py  notification_service.py  pyproject.toml  settings.py  setup.py
backend/python/proto-build/: main.py  pyproject.toml
backend/python/proto-build/src/proto_build_2/: __init__.py
backend/python/search/: Dockerfile  main.py  pyproject.toml  settings.py  setup.py
backend/python/search/app/: app.py  search_grpc.py
backend/python/search/domain/entities/: cold_form.py  hot_form.py
backend/python/search/domain/services/: cold_form_service.py  hot_form_service.py
backend/python/search/domain/values/: __init__.py  lol_ranks.py  lol_roles.py  servers.py
backend/python/shared/: pyproject.toml
backend/python/shared/src/shared/: logging.py  mail.py  metrics.py  redis.py  redis_manager.py
backend/python/socketgw/: Dockerfile  README.md  main.py  pyproject.toml  routes.py  session.py  settings.py
backend/python/stubs/: __init__.py  club_stub.py  gameseries_stub.py  group_stub.py  messenger_stub.py  search_stub.py  team_stub.py  tournament_stub.py  user_stub.py
backend/rust/: Cargo.toml
backend/rust/proto-build/: Cargo.toml  build.rs
backend/rust/proto-build/src/: lib.rs
backend/rust/services/draft/: Cargo.toml  Dockerfile
backend/rust/services/draft/src/: draft.rs  draft_service.rs  errors.rs  loldraft.rs  main.rs  schemas.rs  state.rs
backend/rust/services/game/: Cargo.toml  Dockerfile
backend/rust/services/game/src/: main.rs
backend/rust/services/gateway/: Cargo.toml
backend/rust/services/gateway/src/: main.rs  setup.rs
backend/rust/shared/: Cargo.toml
backend/rust/shared/src/: errors.rs  infra.rs  lib.rs
backend/rust/shared/src/game/: general.rs  lol.rs  mod.rs
clients/ALT/: Cargo.toml
clients/ALT/src/: backend.rs  main.rs  schemas.rs  service.rs
clients/ALT/src/ui/: app.rs  mod.rs  styles.rs
(+340 files in other folders)
