[workspace]

resolver="3"
members = ["proto-build", "services/draft","shared"]

[workspace.dependencies]
shared = { path = "shared" }
proto_build = { path = "proto_build" }

tokio = { version = "1.50.0", features = ["full"] }
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
redis = { version = "1.0.5", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = "0.3.47"
uuid = { version = "1.22.0", features = ["v4","serde"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
regex = "1.12.3"
mongodb = "3.5.1"
futures = "0.3.32"

tonic = "0.14.5"
prost = "0.14.3"
tonic-build = "0.14.5"
prost-build = "0.14.3"
tonic-prost-build = "0.14.5"
