[package]
name = "ALT"
version = "0.1.0"
edition = "2024"

[dependencies]
irelia = "0.11.1"
ratatui = { version = "0.30.0", default-features = false, features = ["all-widgets"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4"] }
