[package]
name = "my_app"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.8"
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tonic = "0.14.5"
prost = "0.14.3"
proto-build = { path = "../../rust/proto-build" }