[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dishka>=1.9.1",
    "fastapi>=0.136.0",
    "granian>=2.7.3",
    "grpcio>=1.80.0",
    "grpcio-reflection>=1.80.0",
    "loguru>=0.7.0",
    "pydantic-settings>=2.13.1",
]
