[project]
name = "messenger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beanie>=2.1.0",
    "dishka>=1.9.1",
    "grpcio>=1.80.0",
    "grpcio-reflection>=1.80.0",
    "grpcio-tools>=1.80.0",
    "pymongo>=4.16.0",
]
