[project]
name = "search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beanie>=2.1.0",
    "grpcio>=1.80.0",
    "grpcio-reflection>=1.80.0",
    "loguru>=0.7.0",
    "pydantic-settings>=2.0.0",
    "pymongo>=4.16.0",
]
