[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Orion", email = "asiskrich@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "grpcio>=1.80.0",
    "prometheus-client>=0.21.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
