[package]
name = "proto-build"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
tonic ={workspace=true}
prost = {workspace=true}
tonic-prost = "0.14.5"
prost-types = { version = "0.14.3", features = ["chrono"] }
pbjson = "0.9.0"

tonic-rest = "0.1.5"
axum.workspace = true


[build-dependencies]

protox = "0.9.1"
tonic-rest-build = "0.1.5"

tonic-prost-build = {workspace=true}
