[package]
name = "draft"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = { workspace=true }


proto-build = { workspace=true }
shared = { workspace=true }
uuid = { workspace=true }
chrono = {workspace = true}
serde = { workspace=true}
serde_json = { workspace=true}
redis = { workspace = true}
redis-macros= { workspace = true}
thiserror={workspace=true}
