[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
proto-build = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"
